[package]
name = "new_mkl_rust_test"
version = "0.1.0"
authors = ["Brian J Jones <brian.j.jones@intel.com>"]
description = "Wasmtime implementation of the wasi-mkl API"
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["webassembly", "wasm", "blas"]
readme = "README.md"
edition = "2018"
publish = false

[dependencies]
# These dependencies are necessary for the witx-generation macros to work:
# anyhow = "1.0"
# log = { version = "0.4", default-features = false }
# wasmtime = { path = "../wasmtime", version = "0.21.0", default-features = false }
# wasmtime-runtime = { path = "../runtime", version = "0.21.0" }
# wasmtime-wiggle = { path = "../wiggle/wasmtime", version = "0.21.0" }
# wasmtime-wasi = { path = "../wasi", version = "0.21.0" }
# wiggle = { path = "../wiggle", version = "0.21.0" }

# MKL dependencies
# blas = "0.20"
cblas = "0.2.0"
# blas-sys = "0.7.1"
# blas-sys = { version = "0.7.1", features = ["intel-mkl"] }
intel-mkl-src = "0.6.0+mkl2020.1"

# This crate is built with the wasm32-wasi target, so it's separate
# from the main Wasmtime build, so use this directive to exclude it
# from the parent directory's workspace.


[badges]
maintenance = { status = "experimental" }

[workspace]
